{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 128,
  "lineage": "e49128fb-7d26-03a5-a31d-e6e4a1bb762f",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_access_specific_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-23T04:13:59.092-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/compute-engine-learning-433211/global/firewalls/allow-access-to-specific-ip",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "allow-access-to-specific-ip",
            "network": "https://www.googleapis.com/compute/v1/projects/compute-engine-learning-433211/global/networks/private-custom-vpc",
            "priority": 1001,
            "project": "compute-engine-learning-433211",
            "self_link": "https://www.googleapis.com/compute/v1/projects/compute-engine-learning-433211/global/firewalls/allow-access-to-specific-ip",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "compute-engine-instance-template"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.custom-vpc-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-23T04:13:58.094-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/compute-engine-learning-433211/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/compute-engine-learning-433211/global/networks/private-custom-vpc",
            "priority": 1000,
            "project": "compute-engine-learning-433211",
            "self_link": "https://www.googleapis.com/compute/v1/projects/compute-engine-learning-433211/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "compute-engine-instance-template"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.custom-vpc-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "custom-vpc-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "Custom VPC network that has only 1 subnet with private google access and flow logs enabled",
            "enable_ula_internal_ipv6": false,
            "id": "projects/compute-engine-learning-433211/global/networks/private-custom-vpc",
            "mtu": 1460,
            "name": "private-custom-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "7685044720231632944",
            "project": "compute-engine-learning-433211",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/compute-engine-learning-433211/global/networks/private-custom-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "custom-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-08-23T04:14:01.126-07:00",
            "description": "Custom Subnet that has an ip range of 10.0.1.0/24",
            "gateway_address": "10.0.1.1",
            "id": "projects/compute-engine-learning-433211/regions/asia-south1/subnetworks/custom-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_30_SEC",
                "filter_expr": "true",
                "flow_sampling": 1,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "custom-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/compute-engine-learning-433211/global/networks/private-custom-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "compute-engine-learning-433211",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/compute-engine-learning-433211/regions/asia-south1/subnetworks/custom-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.custom-vpc-network"
          ]
        }
      ]
    }
  ]
}